--- a/parent.html
+++ b/parent.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>parent</title>
+    <title>parents</title>
     <link rel="stylesheet" href="/css/style.css">
     <script>
         (function(d) {
@@ -53,7 +53,7 @@
             </div>
         </div>
     </section>
-    <section id="parent-footer">
+    <section class="parent-footer">
         <div class="parent-footer-1">
             <img src="/img/遊んで学んで プログラミング.png" alt="">
             <div class="footer-btn-1">
