--- a/goods.html
+++ b/goods.html
@@ -17,4 +17,38 @@
         })(document);
       </script>
 </head>
+<body>
+  <section id="goods-top">
+    <div class="goods-top-heading">
+      <h1>身に付く能力</h1>
+      <h2>遊べる、学べる</h2>
+    </div>
+  </section>
+  <section id="goods-main">
+    <div class="goods-main-game"></div>
+    <div class="goods-main-robot"></div>
+    <div class="goods-main-analog"></div>
+    <div class="goods-main-thinking"></div>
+    <div class="goods-main-tv"></div>
+  </section>
+  <section class="parent-footer">
+    <div class="parent-footer-1">
+        <img src="/img/遊んで学んで プログラミング.png" alt="">
+        <div class="footer-btn-1">
+            <div class="footer-btn-ability">
+                <a href="/ability.html">身に付く能力</a>
+            </div>
+            <div class="footer-btn-goods">
+                <a href="/goods.html">商品紹介</a>
+            </div>
+        </div>
+        <div class="footer-btn-2">
+            <div class="footer-btn-child">
+                <a href="/index.html">子供用ページへ</a>
+            </div>
+        </div>
+    </div>
+    <div class="parent-footer-2"></div>
+</section>
+</body>
 </html>
