--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,43 +8,94 @@
     <title>oyako</title>
     <link rel="stylesheet" href="/css/style.css">
     <script>
-        (function(d) {
-          var config = {
-            kitId: 'yuw0zzc',
-            scriptTimeout: 3000,
-            async: true
-          },
-          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        (function (d) {
+            var config = {
+                    kitId: 'yuw0zzc',
+                    scriptTimeout: 3000,
+                    async: true
+                },
+                h = d.documentElement,
+                t = setTimeout(function () {
+                    h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+                }, config.scriptTimeout),
+                tk = d.createElement("script"),
+                f = false,
+                s = d.getElementsByTagName("script")[0],
+                a;
+            h.className += " wf-loading";
+            tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
+            tk.async = true;
+            tk.onload = tk.onreadystatechange = function () {
+                a = this.readyState;
+                if (f || a && a != "complete" && a != "loaded") return;
+                f = true;
+                clearTimeout(t);
+                try {
+                    Typekit.load(config)
+                } catch (e) {}
+            };
+            s.parentNode.insertBefore(tk, s)
         })(document);
-      </script>
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/gsap@3.7.0/dist/ScrollTrigger.min.js"></script>
 </head>
+
 <body>
-    <section id="top"></section>
+    <section id="top">
+        <div class="top-main">
+            <div class="top-text">
+                <p id="top-text-first" class="top-text-first">遊んで</p>
+                <p id="top-text-second" class="top-text-second">学べる</p>
+                <img src="/img/e0100_0.png" alt="">
+                <p id="top-text-third" class="top-text-third">プログラミング教育</p>
+            </div>
+            <div id="top-character" class="top-character">
+                <img id="top-character-c" class="top-character-c" src="/img/chara-c.png" alt="">
+                <img id="top-character-p" class="top-character-p" src="/img/chara-p.png" alt="">
+            </div>
+        </div>
+        <div class="top-background">
+            <img class="top-background-1" src="/img/1.png" alt="">
+            <img class="top-background-4" src="/img/4.png" alt="">
+            <img class="top-background-6" src="/img/6.png" alt="">
+            <img class="top-background-2" src="/img/2.png" alt="">
+            <img class="top-background-0" src="/img/0.png" alt="">
+            <img class="top-background-8" src="/img/8.png" alt="">
+            <img class="top-background-3" src="/img/3.png" alt="">
+            <img class="top-background-9" src="/img/9.png" alt="">
+            <img class="top-background-5" src="/img/5.png" alt="">
+            <img class="top-background-7" src="/img/7.png" alt="">
+        </div>
+    </section>
     <section id="main">
         <div class="desc">
             <div class="desc-body">
                 <h1>プログラミングって何？</h1>
                 <img src="/img/robot.jpg" alt="">
+                <img class="desc-body-chara-c" src="/img/chara-c.png" alt="">
+                <img class="desc-body-chara-p" src="/img/chara-p.png" alt="">
                 <div class="desc-body-btn">
-                    <a href="#">さらに詳しく</a>
+                    <a href="why.html">さらに詳しく</a>
                 </div>
             </div>
         </div>
         <div class="more">
             <div class="more-body">
                 <div class="more-text">
-                    <p>つくる</p>
-                    <p>まなぶ</p>
-                    <p>あそぶ</p>
+                    <p class="more-p1">つくる</p>
+                    <p class="more-p2">まなぶ</p>
+                    <p class="more-p3">あそぶ</p>
                 </div>
                 <img src="/img/child1.jpg" alt="">
             </div>
             <div class="more-body">
                 <img src="/img/child2.jpg" alt="">
                 <div class="more-text">
-                    <p>かんがえる</p>
-                    <p>まなぶ</p>
-                    <p>あそぶ</p>
+                    <p class="more-p4">かんがえる</p>
+                    <p class="more-p5">まなぶ</p>
+                    <p class="more-p6">あそぶ</p>
                 </div>
             </div>
         </div>
@@ -52,7 +104,7 @@
         <div class="footer-main">
             <img src="/img/遊んで学んで プログラミング.png" alt="">
             <div class="footer-btn-1">
-                <a href="#">プログラミングって何？</a>
+                <a href="why.html">プログラミングって何？</a>
             </div>
             <div class="footer-btn-2">
                 <a href="/parent.html">保護者用ページへ</a>
@@ -60,5 +112,7 @@
         </div>
         <div class="footer-bottom"></div>
     </footer>
+    <script src="js/gsap.js"></script>
 </body>
+
 </html>
