--- a/ability.html
+++ b/ability.html
@@ -24,15 +24,18 @@
   <section id="ability-top">
     <div class="ability-top-heading">
       <h1>身に付く能力</h1>
-      <h2>遊べる、学べる</h2>
+      <h2>分かる、作れる</h2>
     </div>
   </section>
   <section id="ability-contents">
     <div class="ability-contents-0">
     <div class="ability-contents-main ab-main-1">
       <div class="ability-contents-text">
-        <h1>考える</h1>
-        <p>物事を順序立てて<br>考えられるようになる！</p>
+        <h1>わかる力</h1>
+        <p>「ショートケーキはケーキの種類で<br>
+          いちごと生クリームとスポンジでできている…」<br>
+          というように物事を抽象化しておおまかに捉え<br>
+          分解して構造を知ることができるようになります。</p>
       </div>
       <img src="/img/child1.jpg" alt="">
     </div>
@@ -60,16 +63,16 @@
   </div>
     <div class="ability-contents-btn">
       <div class="ability-contents-btn-D ab-btn-1">
-        <h2>考える</h2>
+        <h2>わかる力</h2>
       </div>
       <div class="ability-contents-btn-D ab-btn-2">
-        <h2>作る</h2>
+        <h2>並び替える力</h2>
       </div>
       <div class="ability-contents-btn-D ab-btn-3">
-        <h2>思考力</h2>
+        <h2>簡単にする力</h2>
       </div>
       <div class="ability-contents-btn-D ab-btn-4">
-        <h2>サンプル</h2>
+        <h2>作り出す力</h2>
       </div>
     </div>
   </section>
