--- a/goods.html
+++ b/goods.html
@@ -135,9 +135,9 @@
       <h3>SCRATCH</h3>
       <div class="goods-info-main">
         <img src="/img/scratch.png" alt="">
-        <p>ここに商品のおすすめしたいポイント<br>
-          とかを三行くらいで書いていく。<br>
-          だいたいこれくらいの分量で。</p>
+        <p>コードをパズルのように組み合わせてゲームを作ります。<br>
+          多くの教育機関で取り入れられていて<br>
+          初心者向けの教材がとても豊富です。</p>
         <div class="product">
           <div class="product-left">
             <h4>SCRATCH</h4>
