--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 <img src="/img/child2.jpg" alt="">
                 <div class="more-text">
                     <p class="more-p4">かんがえる</p>
-                    <p class="more-p5">まなぶ</p>
-                    <p class="more-p6">あそぶ</p>
+                    <p class="more-p5">みつける</p>
+                    <p class="more-p6">わかる</p>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
         <div class="footer-main">
             <img src="/img/遊んで学んで プログラミング.png" alt="">
             <div class="footer-btn-1">
-                <a href="why.html">プログラミングって何？</a>
+                <a href="what.html">プログラミングって何？</a>
             </div>
             <div class="footer-btn-2">
                 <a href="/parent.html">保護者用ページへ</a>
