--- a/parent.html
+++ b/parent.html
@@ -181,7 +181,7 @@
                 <li><a href="ability.html">身に付く能力</a></li>
                 <li><a href="goods.html">商品紹介</a></li>
                 <li><a href="index.html"><span>子供用</span><br>プログラミング<br><span>トップページ</span></a></li>
-                <li><a href="why.html">プログラミングって何？</a></li>
+                <li><a href="what.html">プログラミングって何？</a></li>
             </ul>
             <div class="parent-menu-close"></div>
         </div>
